--- a/public/html.html
+++ b/public/html.html
@@ -209,7 +209,7 @@
         <p class="job-period">UX/UI дизайнер, октябрь 2023 — настоящее время</p>
         <ul>
           <li>
-            Разработал интерфейсы более 10 приложений:
+            Разработал интерфейсы более 10 приложений
             <!-- <ul>
               <li>Многостраничный портал застройщика (Web)</li>
               <li>Приложение для терминала сбора данных для завода по заправке баллонов (Android)</li>
